tests/try/try.exp
Error ------------------------------------------------------------------------------------- destructuring-catch.js:11:25

Cannot assign `1` to `foo` because number [1] is incompatible with string [2].

   destructuring-catch.js:11:25
   11|     const foo: string = 1; // it typechecks
                               ^ [1]

References:
   destructuring-catch.js:11:16
   11|     const foo: string = 1; // it typechecks
                      ^^^^^^ [2]


Error ------------------------------------------------------------------------------------- destructuring-catch.js:22:25

Cannot assign `1` to `foo` because number [1] is incompatible with string [2].

   destructuring-catch.js:22:25
   22|     const foo: string = 1; // it typechecks
                               ^ [1]

References:
   destructuring-catch.js:22:16
   22|     const foo: string = 1; // it typechecks
                      ^^^^^^ [2]


Error ------------------------------------------------------------------------------------- destructuring-catch.js:30:23

Type annotations for catch parameters are not yet supported.

   30|   } catch ({message}: any) {
                             ^^^


Error ------------------------------------------------------------------------------------- destructuring-catch.js:32:25

Cannot assign `1` to `foo` because number [1] is incompatible with string [2].

   destructuring-catch.js:32:25
   32|     const foo: string = 1; // it typechecks
                               ^ [1]

References:
   destructuring-catch.js:32:16
   32|     const foo: string = 1; // it typechecks
                      ^^^^^^ [2]


Error ------------------------------------------------------------------------------------- destructuring-catch.js:40:23

Type annotations for catch parameters are not yet supported.

   40|   } catch ({message}: {message: string}) { // error
                             ^^^^^^^^^^^^^^^^^


Error ------------------------------------------------------------------------------------- destructuring-catch.js:42:25

Cannot assign `1` to `foo` because number [1] is incompatible with string [2].

   destructuring-catch.js:42:25
   42|     const foo: string = 1; // it typechecks
                               ^ [1]

References:
   destructuring-catch.js:42:16
   42|     const foo: string = 1; // it typechecks
                      ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- init.js:34:20

Cannot assign `x` to `y` because possibly uninitialized variable [1] is incompatible with number [2].

   init.js:34:20
   34|     var y:number = x; // error
                          ^

References:
   init.js:32:9
   32|     var x:number = 0;
               ^ [1]
   init.js:34:11
   34|     var y:number = x; // error
                 ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- init.js:44:20

Cannot assign `x` to `y` because possibly uninitialized variable [1] is incompatible with number [2].

   init.js:44:20
   44|     var y:number = x; // error
                          ^

References:
   init.js:42:9
   42|     var x:number = 0;
               ^ [1]
   init.js:44:11
   44|     var y:number = x; // error
                 ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- init.js:54:20

Cannot assign `x` to `y` because possibly uninitialized variable [1] is incompatible with number [2].

   init.js:54:20
   54|     var y:number = x; // error
                          ^

References:
   init.js:52:9
   52|     var x:number = 0;
               ^ [1]
   init.js:54:11
   54|     var y:number = x; // error
                 ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- init.js:66:20

Cannot assign `x` to `y` because possibly uninitialized variable [1] is incompatible with number [2].

   init.js:66:20
   66|     var y:number = x; // error
                          ^

References:
   init.js:61:9
   61|     var x:number = 0;
               ^ [1]
   init.js:66:11
   66|     var y:number = x; // error
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- init.js:118:18

Cannot assign `x` to `y` because uninitialized variable [1] is incompatible with number [2].

   init.js:118:18
   118|   var y:number = x; // error
                         ^

References:
   init.js:120:9
   120|     var x:number = 0;
                ^ [1]
   init.js:118:9
   118|   var y:number = x; // error
                ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- init.js:131:18

Cannot assign `x` to `y` because possibly uninitialized variable [1] is incompatible with number [2].

   init.js:131:18
   131|   var y:number = x; // error
                         ^

References:
   init.js:128:9
   128|     var x:number = 0;
                ^ [1]
   init.js:131:9
   131|   var y:number = x; // error
                ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- init.js:140:18

Cannot assign `x` to `y` because possibly uninitialized variable [1] is incompatible with number [2].

   init.js:140:18
   140|   var y:number = x; // error
                         ^

References:
   init.js:138:9
   138|     var x:number = 0;
                ^ [1]
   init.js:140:9
   140|   var y:number = x; // error
                ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- init.js:153:18

Cannot assign `x` to `y` because possibly uninitialized variable [1] is incompatible with number [2].

   init.js:153:18
   153|   var y:number = x; // error
                         ^

References:
   init.js:146:9
   146|     var x:number;
                ^ [1]
   init.js:153:9
   153|   var y:number = x; // error
                ^^^^^^ [2]


Error ---------------------------------------------------------------------------------- optional-catch-binding.js:19:20

Cannot assign `x` to `y` because possibly uninitialized variable [1] is incompatible with number [2].

   optional-catch-binding.js:19:20
   19|     var y:number = x; // error
                          ^

References:
   optional-catch-binding.js:17:9
   17|     var x:number = 0;
               ^ [1]
   optional-catch-binding.js:19:11
   19|     var y:number = x; // error
                 ^^^^^^ [2]


Error ---------------------------------------------------------------------------------- optional-catch-binding.js:27:20

Cannot assign `'string'` to `y` because string [1] is incompatible with number [2].

   optional-catch-binding.js:27:20
   27|     var y:number = 'string'; // error
                          ^^^^^^^^ [1]

References:
   optional-catch-binding.js:27:11
   27|     var y:number = 'string'; // error
                 ^^^^^^ [2]


Error ---------------------------------------------------------------------------------- optional-catch-binding.js:36:20

Cannot assign `x` to `y` because number [1] is incompatible with string [2].

   optional-catch-binding.js:36:20
   36|     var y:string = x; // error
                          ^

References:
   optional-catch-binding.js:33:10
   33|   var x: number = 0;
                ^^^^^^ [1]
   optional-catch-binding.js:36:11
   36|     var y:string = x; // error
                 ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- return.js:28:3

Unreachable code.

   28|   return "bar"; // unreachable
         ^^^^^^^^^^^^^


Error --------------------------------------------------------------------------------------------------- return.js:64:3

Unreachable code.

   64|   bar(); // unreachable
         ^^^^^^


Error ----------------------------------------------------------------------------------------------------- test.js:18:5

Cannot call `x` because string [1] is not a function.

   test.js:18:5
   18|     x(); // string ~/> function call (no num or bool error)
           ^^^

References:
   test.js:10:13
   10|         x = "";
                   ^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:19:5

Cannot call `y` because a call signature declaring the expected parameter / return type is missing in object
literal [1].

   test.js:19:5
   19|     y(); // object ~/> function call (no uninitialized error)
           ^^^

References:
   test.js:15:13
   15|         y = {};
                   ^^ [1]


Error ----------------------------------------------------------------------------------------------------- test.js:41:5

Unreachable code.

   41|     x(); // unreachable
           ^^^^


Error ---------------------------------------------------------------------------------------------------- test.js:49:21

Cannot assign `x[0]` to `a` because number [1] is incompatible with string [2].

   test.js:49:21
   49|     var a: string = x[0];
                           ^^^^

References:
   test.js:45:10
   45|   let x: number[] = [];
                ^^^^^^ [1]
   test.js:49:12
   49|     var a: string = x[0];
                  ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:51:21

Cannot assign `x[0]` to `b` because number [1] is incompatible with string [2].

   test.js:51:21
   51|     var b: string = x[0];
                           ^^^^

References:
   test.js:45:10
   45|   let x: number[] = [];
                ^^^^^^ [1]
   test.js:51:12
   51|     var b: string = x[0];
                  ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:53:19

Cannot assign `x[0]` to `c` because number [1] is incompatible with string [2].

   test.js:53:19
   53|   var c: string = x[0]; // reachable
                         ^^^^

References:
   test.js:45:10
   45|   let x: number[] = [];
                ^^^^^^ [1]
   test.js:53:10
   53|   var c: string = x[0]; // reachable
                ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:61:21

Cannot assign `x[0]` to `a` because number [1] is incompatible with string [2].

   test.js:61:21
   61|     var a: string = x[0];
                           ^^^^

References:
   test.js:57:10
   57|   let x: number[] = [];
                ^^^^^^ [1]
   test.js:61:12
   61|     var a: string = x[0];
                  ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:63:19

Cannot assign `x[0]` to `c` because number [1] is incompatible with string [2].

   test.js:63:19
   63|   var c: string = x[0]; // reachable
                         ^^^^

References:
   test.js:57:10
   57|   let x: number[] = [];
                ^^^^^^ [1]
   test.js:63:10
   63|   var c: string = x[0]; // reachable
                ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:72:19

Cannot assign `x[0]` to `c` because number [1] is incompatible with string [2].

   test.js:72:19
   72|   var c: string = x[0]; // reachable
                         ^^^^

References:
   test.js:67:10
   67|   let x: number[] = [];
                ^^^^^^ [1]
   test.js:72:10
   72|   var c: string = x[0]; // reachable
                ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------------- test.js:78:15

Type annotations for catch parameters are not yet supported.

   78|   } catch (e: string) { // error
                     ^^^^^^


Error ---------------------------------------------------------------------------------------------------- test.js:80:21

Cannot assign `1` to `c` because number [1] is incompatible with string [2].

   test.js:80:21
   80|     var c: string = 1; // it typechecks
                           ^ [1]

References:
   test.js:80:12
   80|     var c: string = 1; // it typechecks
                  ^^^^^^ [2]



Found 30 errors
